--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 
 /* Hero Header */
 #hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('image/bg.jpg') no-repeat center center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('bg.jpg') no-repeat center center/cover;
     color: #fff;
     height: 70vh;
     display: flex;
